@@ -1,7 +1,8 @@
 IN DEVELOPMENT ======= 1.2.7-1
 
-- added: framework.stats.request.web.delete
-- added: framework.stats.request.web.put
+- added: framework.stats.request.delete
+- added: framework.stats.request.put
+- added: framework.stats.request.pending
 
 - updated: complete rewrited markdown parser (more than 50% better performance)
 - updated: complete rewrited markdown example
